--- a/index.html
+++ b/index.html
@@ -18,17 +18,23 @@
         }
     </style>
     <script src="./engine/opencv.js" type="text/javascript"></script>
+
+    <script type="module" src="./entities/dice.js" type="text/javascript"></script>
+    <script type="module" src="./entities/dice_board.js" type="text/javascript"></script>
+    <script type="module" src="./entities/dice_color.js" type="text/javascript"></script>
+
     <script src="./engine/templater.js" type="text/javascript"></script>
     <script src="./engine/color_masks.js" type="text/javascript"></script>
     <script src="./engine/white_balance.js" type="text/javascript"></script>
+    <script type="module" src="./engine/dice_grid_detector.js" type="text/javascript"></script>
 </head>
 
 <body>
     <h2>Hello OpenCV.js</h2>
     <p id="status">OpenCV.js is loading...</p>
-    <button onclick="runDiceDetection()">Run Dice Detection</button>
+    <button id="runDiceDetectionBtn">Run Dice Detection</button>
     <div>
-        <p id="timeTaken"></p>
+        <p id=" timeTaken"></p>
         <div class="inputoutput">
             <img id="imageSrc" alt="No Image" src="./examples/far_full.jpg" />
             <div class="caption">Source image for analysis. <input type="file" id="fileInput" name="file" /></div>
@@ -116,7 +122,9 @@
             <div class="caption">canvasOutput</div>
         </div>
     </div>
-    <script type="text/javascript">
+    <script type="module" type="text/javascript">
+        import DiceGridDetectorV2 from './engine/dice_grid_detector.js';
+
         function getContours(hsv, contoursSrcName = null) {
             // Function to get contours for given hsv and draw them
             let contours = new cv.MatVector();
@@ -126,10 +134,12 @@
             // let anchor = new cv.Point(-1, -1);
             // let iterations = 5;
             // cv.morphologyEx(hsv, hsv, cv.MORPH_OPEN, kernel, anchor, iterations);
-            let M = cv.Mat.ones(50, 50, cv.CV_8U);
-            let anchor = new cv.Point(1, 1);
+            let M = cv.Mat.ones(3, 3, cv.CV_8U);
+            let N = cv.Mat.ones(2, 2, cv.CV_8U);
+            let anchor = new cv.Point(-1, -1);
             let fat = new cv.Mat();
-            cv.dilate(hsv, fat, M, anchor, 1, cv.BORDER_CONSTANT, cv.morphologyDefaultBorderValue());
+            cv.morphologyEx(hsv, fat, cv.MORPH_OPEN, N, anchor, 3, cv.BORDER_CONSTANT, cv.morphologyDefaultBorderValue());
+            cv.dilate(fat, fat, N, anchor, 1, cv.BORDER_CONSTANT, cv.morphologyDefaultBorderValue());
 
             cv.findContours(fat, contours, hierarchy, cv.RETR_CCOMP, cv.CHAIN_APPROX_SIMPLE);
 
@@ -137,13 +147,15 @@
                 return contours;
             }
 
+            let dst = cv.Mat.zeros(hsv.rows, hsv.cols, cv.CV_8UC3);
+
             for (let i = 0; i < contours.size(); ++i) {
                 let color = new cv.Scalar(255, 255, 255);
                 cv.drawContours(dst, contours, i, color, 1, cv.LINE_8, hierarchy, 100);
             }
 
-            let dst = cv.Mat.zeros(hsv.rows, hsv.cols, cv.CV_8UC3);
-            cv.imshow(contoursSrcName, dst); //dst);
+            console.log('contoursSrcName: ' + contoursSrcName);
+            cv.imshow(contoursSrcName, fat); //dst);
             dst.delete();
 
             return contours;
@@ -245,6 +257,10 @@
             // use the white balanced grid for further processing
             grid.delete();
             grid = gridWhiteBalanced;
+
+            // V2 Detection
+            let detectedV2 = DiceGridDetectorV2.detect(grid);
+            console.log('detectedV2: ' + JSON.stringify(detectedV2));
 
             // Convert image to HSV
             let hsv = cv.Mat.zeros(grid.rows, grid.cols, cv.CV_8UC3);
@@ -350,6 +366,8 @@
             document.getElementById('timeTaken').innerHTML = 'Time taken: ' + timeTaken + 'ms';
         }
 
+        let btnElement = document.getElementById('runDiceDetectionBtn');
+        btnElement.addEventListener('click', runDiceDetection);
         let imgElement = document.getElementById('imageSrc');
         let inputElement = document.getElementById('fileInput');
         inputElement.addEventListener('change', (e) => {
