Add fixes to v2 engine

--- a/index.html
+++ b/index.html
@@ -144,6 +144,32 @@
             <canvas id="hsvOutput"></canvas>
             <div class="caption">hsvOutput</div>
         </div>
+
+        <h2>V2 Algo</h2>
+        <h3>Eyes detection</h3>
+        <div class="inputoutput">
+            <canvas id="eyesMask"></canvas>
+            <div class="caption">Eyes detected by white mask.</div>
+        </div>
+        <div class="inputoutput">
+            <canvas id="eyesMaskEroded"></canvas>
+            <div class="caption">Eyes mask after erosion.</div>
+        </div>
+
+        <h3>Color masks</h3>
+        <div class="inputoutput">
+            <canvas id="dicesMask"></canvas>
+            <div class="caption">Dices mask.</div>
+        </div>
+        <div class="inputoutput">
+            <canvas id="dicesMaskEroded"></canvas>
+            <div class="caption">Dices mask after erosion.</div>
+        </div>
+
+        <h3>Results</h3>
+        <table id="outputTableV2"></table>
+
+        <h2>V1 Algo</h2>
         <h4>Black</h4>
         <div class="inputoutput">
             <canvas id="hsvBlackOutput"></canvas>
