Update color detection in V3 algorithm to display dice area and color count in table

--- a/index.html
+++ b/index.html
@@ -162,6 +162,9 @@
             <canvas id="eyesMaskErodedV3"></canvas>
             <div class="caption">Eyes mask after erosion.</div>
         </div>
+        <h3>Color detection</h3>
+        <p id="approxAreaV3"></p>
+        <table id="colorTableV3"></table>
 
         <h2>V2 Algo</h2>
         <h3>Eyes detection</h3>
